
set(PROG_NAME mqtt_test)
add_executable(${PROG_NAME}_pub pub.cc src/MosquittoIO.cc)
add_executable(${PROG_NAME}_pub_str pub_str.cc src/MosquittoIO.cc)
add_executable(${PROG_NAME}_sub sub.cc src/MosquittoIO.cc)
add_executable(${PROG_NAME}_sub_str sub_str.cc src/MosquittoIO.cc)
target_include_directories(${PROG_NAME}_pub PUBLIC include)
target_include_directories(${PROG_NAME}_pub_str PUBLIC include)
target_include_directories(${PROG_NAME}_sub PUBLIC include)
target_include_directories(${PROG_NAME}_sub_str PUBLIC include)
target_link_libraries(${PROG_NAME}_pub PkgConfig::Mosquitto)
target_link_libraries(${PROG_NAME}_sub PkgConfig::Mosquitto)
target_link_libraries(${PROG_NAME}_pub_str PkgConfig::Mosquitto)
target_link_libraries(${PROG_NAME}_sub_str PkgConfig::Mosquitto)

